k8s/20-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reference-python
  namespace: reference-python
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reference-python
  template:
    metadata:
      labels:
        app: reference-python
    spec:
      containers:
        - name: app
          image: bogdansolga/reference-python-project:1.0
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet:
              path: /
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 20
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 256Mi
