k8s/21-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: reference-python
  namespace: reference-python
spec:
  selector:
    app: reference-python
  ports:
    - port: 8000
      targetPort: 8000
